add pip files to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,15 @@
 input/
+pyvenv.cfg
+
+Activate.ps1
+activate
+activate.csh
+activate.fish
+pip
+pip3
+pip3.11
+python
+python3
+python3.11
+lib64
+
